# CAS_703_HIRO

./: .gitignore  README.md
Master-Slave-Image-Processor_Java/: .gitignore  README.md  pom.xml
Master-Slave-Image-Processor_Java/src/main/java/: GaussianBlur.java  GrayScale.java  ImageProcessing.java  ImageProcessingOpenCV.java  LaplacianFilter.java  LogEntry.java  MasterProcess.java  MetricsLogger.java
RGB_2_GS/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  Master_Legacy.cpp  Master_Legacy.h  Slave_Legacy.cpp  Task.cpp  Task.h  imageOperations.cpp  imageOperations.h  slave.cpp  slave.h  task_queue.cpp  task_queue.h  timer.cpp  timer.h
cpp/: .gitignore  CMakeLists.txt  README.md  plot_results.py  run_tests.sh
cpp/include/: imageOperations.hpp  logs.hpp  master.hpp  taskQueue.hpp  worker.hpp
cpp/src/: imageOperations.cpp  logs.cpp  main.cpp  master.cpp  taskQueue.cpp  worker.cpp
